--- a/post1.html
+++ b/post1.html
@@ -10,7 +10,9 @@
 At present, Malaysia is known as (20)_______________. It is also one of the most rapidly urbanised regions around the world. According to the latest statistics, over 77 per cent of Malaysia's total population now live in urban areas and cities.
 Australia is an interesting example of early urbanisation, which started at the end of the 19th century. At that time, over 60 per cent of the population lived in urban areas. Since then, (21)_______________a gradual growth. This was also due to the country's immigration policy, which encouraged people (22)_______________ in its coastal, urban areas.
 Australia is now one of the most urbanised countries in the world, with almost 90 per cent of the population (23)_______________ in urban areas. The two largest cities of Australia, Sydney and Melbourne, are home to over 40 per cent of the country's population.</p><br>
-<ol start = "18">
+<ol start="18">
+  <li>
+    When a period of rapid growth
     <ul>
       <li>A. When a period of rapid growth</li>
       <li>B. After a period of rapid growth</li>
@@ -18,6 +20,9 @@ Australia is now one of the most urbanised countries in the world, with almost 9
       <li>D. When a period grew rapidly</li>
     </ul>
   </li>
+
+  <li>
+    neither 66 per cent in 2004 nor 74 per cent in 2014
     <ul>
       <li>A. neither 66 per cent in 2004 nor 74 per cent in 2014</li>
       <li>B. both 66 per cent in 2004 and 74 per cent in 2014</li>
@@ -25,6 +30,9 @@ Australia is now one of the most urbanised countries in the world, with almost 9
       <li>D. from 66 per cent in 2004 to 74 per cent in 2014</li>
     </ul>
   </li>
+
+  <li>
+    one of the most urbanised countries in East Asia
     <ul>
       <li>A. one of the most urbanised countries in East Asia</li>
       <li>B. East Asia in one of the most urbanised countries</li>
@@ -32,6 +40,9 @@ Australia is now one of the most urbanised countries in the world, with almost 9
       <li>D. one of urbanised countries in the most East Asia</li>
     </ul>
   </li>
+
+  <li>
+    it has maintained
     <ul>
       <li>A. it has maintained</li>
       <li>B. it had maintained</li>
@@ -39,6 +50,9 @@ Australia is now one of the most urbanised countries in the world, with almost 9
       <li>D. it having maintained</li>
     </ul>
   </li>
+
+  <li>
+    settle
     <ul>
       <li>A. settle</li>
       <li>B. settled</li>
@@ -46,6 +60,9 @@ Australia is now one of the most urbanised countries in the world, with almost 9
       <li>D. settling</li>
     </ul>
   </li>
+
+  <li>
+    live
     <ul>
       <li>A. live</li>
       <li>B. living</li>
