--- a/post1.html
+++ b/post1.html
@@ -1,75 +1,105 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title> Test 1 </title>
+  <title>Fill in the blanks</title>
+  <style>
+    body {
+      font-family: "Times New Roman", serif;
+      font-size: 16px;
+      line-height: 1.6;
+      margin: 40px;
+    }
+
+    .instruction {
+      font-style: italic;
+      margin-bottom: 15px;
+    }
+
+    .passage {
+      text-align: justify;
+    }
+
+    .blank {
+      display: inline-block;
+      min-width: 120px;
+      border-bottom: 1px solid #000;
+      text-align: center;
+      font-weight: bold;
+    }
+
+    .answers {
+      margin-top: 20px;
+    }
+
+    .answers p {
+      margin: 3px 0;
+    }
+  </style>
 </head>
 <body>
-  <h1><i><u><b>Mark the letter A, B, C, or D on your answer sheet to indicate the correct option that best fits each of the numbered blanks from 18 to 23.</b></u></i></h1>
-     <p>Urbanisation in Malaysia started in the early 1970s. At that time, only around 26 per cent of the population lived in urban areas. (18)_______________, the urban and rural populations were almost equal in the early 1990s. Since then, the urbanisation rate has continued to increase gradually. The urban population, for example, rose (19)_______________.
-At present, Malaysia is known as (20)_______________. It is also one of the most rapidly urbanised regions around the world. According to the latest statistics, over 77 per cent of Malaysia's total population now live in urban areas and cities.
-Australia is an interesting example of early urbanisation, which started at the end of the 19th century. At that time, over 60 per cent of the population lived in urban areas. Since then, (21)_______________a gradual growth. This was also due to the country's immigration policy, which encouraged people (22)_______________ in its coastal, urban areas.
-Australia is now one of the most urbanised countries in the world, with almost 90 per cent of the population (23)_______________ in urban areas. The two largest cities of Australia, Sydney and Melbourne, are home to over 40 per cent of the country's population.</p><br>
-<ol start="18">
-  <li>
-    When a period of rapid growth
-    <ul>
-      <li>A. When a period of rapid growth</li>
-      <li>B. After a period of rapid growth</li>
-      <li>C. A period of rapid growth</li>
-      <li>D. When a period grew rapidly</li>
-    </ul>
-  </li>
 
-  <li>
-    neither 66 per cent in 2004 nor 74 per cent in 2014
-    <ul>
-      <li>A. neither 66 per cent in 2004 nor 74 per cent in 2014</li>
-      <li>B. both 66 per cent in 2004 and 74 per cent in 2014</li>
-      <li>C. either 66 per cent in 2004 or 74 per cent in 2014</li>
-      <li>D. from 66 per cent in 2004 to 74 per cent in 2014</li>
-    </ul>
-  </li>
+<p class="instruction">
+  Mark the letter A, B, C, or D on your answer sheet to indicate the correct option
+  that best fits each of the numbered blanks from 18 to 23.
+</p>
 
-  <li>
-    one of the most urbanised countries in East Asia
-    <ul>
-      <li>A. one of the most urbanised countries in East Asia</li>
-      <li>B. East Asia in one of the most urbanised countries</li>
-      <li>C. the most urbanised countries in one of East Asia</li>
-      <li>D. one of urbanised countries in the most East Asia</li>
-    </ul>
-  </li>
+<div class="passage">
+  <p>
+    Urbanisation in Malaysia started in the early 1970s. At that time, only around
+    26 per cent of the population lived in urban areas.
+    (<span class="blank">18</span>), the urban and rural populations were almost
+    equal in the early 1990s. Since then, the urbanisation rate has continued to
+    increase gradually. The urban population, for example, rose
+    (<span class="blank">19</span>).
+  </p>
 
-  <li>
-    it has maintained
-    <ul>
-      <li>A. it has maintained</li>
-      <li>B. it had maintained</li>
-      <li>C. it is maintained</li>
-      <li>D. it having maintained</li>
-    </ul>
-  </li>
+  <p>
+    At present, Malaysia is known as
+    (<span class="blank">20</span>). It is also one of the most rapidly urbanised
+    regions around the world. According to the latest statistics, over 77 per cent
+    of Malaysia's total population now live in urban areas and cities.
+  </p>
 
-  <li>
-    settle
-    <ul>
-      <li>A. settle</li>
-      <li>B. settled</li>
-      <li>C. to settle</li>
-      <li>D. settling</li>
-    </ul>
-  </li>
+  <p>
+    Australia is an interesting example of early urbanisation, which started at
+    the end of the 19th century. At that time, over 60 per cent of the population
+    lived in urban areas. Since then,
+    (<span class="blank">21</span>) a gradual growth. This was also due to the
+    country's immigration policy, which encouraged people
+    (<span class="blank">22</span>) in its coastal urban areas.
+  </p>
 
-  <li>
-    live
-    <ul>
-      <li>A. live</li>
-      <li>B. living</li>
-      <li>C. lived</li>
-      <li>D. is living</li>
-    </ul>
-  </li>
-</ol>
+  <p>
+    Australia is now one of the most urbanised countries in the world, with almost
+    90 per cent of the population
+    (<span class="blank">23</span>) in urban areas. The two largest cities of
+    Australia, Sydney and Melbourne, are home to over 40 per cent of the country's
+    population.
+  </p>
+</div>
+
+<div class="answers">
+  <p><strong>18.</strong> A. When a period of rapid growth &nbsp;&nbsp; B. After a period of rapid growth</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp; C. A period of rapid growth &nbsp;&nbsp; D. When a period grew rapidly</p>
+
+  <p><strong>19.</strong> A. neither 66 per cent in 2004 nor 74 per cent in 2014</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp; B. both 66 per cent in 2004 and 74 per cent in 2014</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp; C. either 66 per cent in 2004 or 74 per cent in 2014</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp; D. from 66 per cent in 2004 to 74 per cent in 2014</p>
+
+  <p><strong>20.</strong> A. one of the most urbanised countries in East Asia</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp; B. East Asia in one of the most urbanised countries</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp; C. the most urbanised countries in one of East Asia</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp; D. one of urbanised countries in the most East Asia</p>
+
+  <p><strong>21.</strong> A. it has maintained &nbsp;&nbsp; B. it had maintained</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp; C. it is maintained &nbsp;&nbsp; D. it having maintained</p>
+
+  <p><strong>22.</strong> A. settle &nbsp;&nbsp; B. settled &nbsp;&nbsp; C. to settle &nbsp;&nbsp; D. settling</p>
+
+  <p><strong>23.</strong> A. live &nbsp;&nbsp; B. living &nbsp;&nbsp; C. lived &nbsp;&nbsp; D. is living</p>
+</div>
+
 </body>
 </html>
