--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>Đây là blog cá nhân của bọn mình</p>
   <p>Xem bài viết của page theo danh sách sau:</p>
   <ul>
-    <a href="posts/post1.html">Bài 1</a>
+    <li><a href="post1.html">Bài 1</a></li>
     <li><a href="post2.html">Bài viết 2</a></li>
   </ul>
 </body>
